--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,27 +1,17 @@
-test-ci-lib-llvm: &test-ci-lib-llvm
-  name: Run make lib-llvm
-  command: |
-    # When testing override CPUs in command line, such as:
-    #   $ circleci build -e CPUs=11 --job ubuntu-debug
-    echo 'if [ "$CPUs" == "" ]; then cnt=$(nproc); if (( $cnt >= 4 )); then (( cnt=$cnt / 4 )); else cnt=1; fi; if (( $cnt > 4 )); then cnt=4; fi; export CPUs=$cnt; fi;' >> $BASH_ENV
-    source $BASH_ENV
-    echo "make-llvm: CPUs=$CPUs test_ci_params='$test_ci_params'"
-    make -f Makefile-lib-llvm test-ci -j$CPUs $test_ci_params
-
 version: 2.1
 
 orbs:
   zulip: ponylang/zulip@1
 
 jobs:
-  x86-64-unknown-linux-gnu-nightly:
-    docker:
-      - image: ponylang/ponyc-ci:x86-64-unknown-linux-gnu-nightly
-    steps:
-      - checkout
-      - run: bash .ci-scripts/x86-64-unknown-linux-gnu-nightly.bash ${CLOUDSMITH_API_KEY}
-      - zulip/status:
-          fail_only: true
+  # x86-64-unknown-linux-gnu-nightly:
+  #   docker:
+  #     - image: ponylang/ponyc-ci:x86-64-unknown-linux-gnu-nightly
+  #   steps:
+  #     - checkout
+  #     - run: bash .ci-scripts/x86-64-unknown-linux-gnu-nightly.bash ${CLOUDSMITH_API_KEY}
+  #     - zulip/status:
+  #         fail_only: true
 
   verify-changelog:
     docker:
@@ -32,114 +22,110 @@ jobs:
       - zulip/status:
           fail_only: true
 
-#   validate-docker-image-builds:
-#       docker:
-#         - image: ponylang/ponyc-ci:docker-builder
-#       steps:
-#         - checkout
-#         - setup_remote_docker
-#         - run: docker build --cache-from=app -t app .
-#         - run: docker build --cache-from=app-alpine --file=.dockerhub/alpine/Dockerfile -t app-alpine .
-#         - zulip/status:
-#             fail_only: true
+  validate-docker-image-builds:
+      docker:
+        - image: ponylang/ponyc-ci:docker-builder
+      steps:
+        - checkout
+        - setup_remote_docker
+        - run: docker build --cache-from=app -t app .
+        - run: docker build --cache-from=app-alpine --file=.dockerhub/alpine/Dockerfile -t app-alpine .
+        - zulip/status:
+            fail_only: true
 
-#   validate-shell-scripts:
-#     docker:
-#       - image: ponylang/ponyc-ci:shellcheck
-#     steps:
-#       - checkout
-#       - run: find . -name '*.bash' -exec shellcheck {} \;
-#       - zulip/status:
-#           fail_only: true
+  validate-shell-scripts:
+    docker:
+      - image: ponylang/ponyc-ci:shellcheck
+    steps:
+      - checkout
+      - run: find . -name '*.bash' -exec shellcheck {} \;
+      - zulip/status:
+          fail_only: true
 
-  # alpine-lib-llvm-debug-static:
-  #   docker:
-  #     - image: ponylang/ponyc-ci:alpine
-  #       user: pony
-  #   steps:
-  #     - checkout
-  #     - run: make -f Makefile-lib-llvm all config=debug default_pic=true staticbuild=true -j3
-  #     - run: make -f Makefile-lib-llvm test-ci config=debug default_pic=true staticbuild=true
-  #     - zulip/status:
-  #         fail_only: true
+  # Jobs for building and testing with ponyc vendor lib/llvm
+  ubuntu-lib-llvm-debug:
+    docker:
+      - image: ponylang/ponyc-ci:ubuntu
+        user: pony
+    steps:
+      - checkout
+      - restore_cache:
+          keys:
+            - ponyc-libs-ubuntu-{{ .Branch }}-{{ .Revision }}
+            - ponyc-libs-ubuntu-{{ .Branch }}-
+            - ponyc-libs-ubuntu-
+      - run: make -f Makefile libs
+      - save_cache:
+          key: ponyc-libs-ubuntu-{{ .Branch }}-{{ .Revision }}
+          paths:
+            - "build/libs"
+      - run: make -f Makefile all config=debug
+      - run: make -f Makefile test-ci config=debug
+      - zulip/status:
+          fail_only: true
 
-  # alpine-lib-llvm-release-static:
-  #   docker:
-  #     - image: ponylang/ponyc-ci:alpine
-  #       user: pony
-  #   steps:
-  #     - checkout
-  #     - run: make -f Makefile-lib-llvm all config=release default_pic=true staticbuild=true -j3
-  #     - run: make -f Makefile-lib-llvm test-ci config=release default_pic=true staticbuild=true
-  #     - zulip/status:
-  #         fail_only: true
+  ubuntu-lib-llvm-release:
+    docker:
+      - image: ponylang/ponyc-ci:ubuntu
+        user: pony
+    steps:
+      - checkout
+      - restore_cache:
+          keys:
+            - ponyc-libs-ubuntu-{{ .Branch }}-{{ .Revision }}
+            - ponyc-libs-ubuntu-{{ .Branch }}-
+            - ponyc-libs-ubuntu-
+      - run: make -f Makefile libs
+      - save_cache:
+          key: ponyc-libs-ubuntu-{{ .Branch }}-{{ .Revision }}
+          paths:
+            - "build/libs"
+      - run: make -f Makefile all config=release
+      - run: make -f Makefile test-ci config=release
+      - zulip/status:
+          fail_only: true
 
-  # alpine-llvm-7-debug-static:
-  #   docker:
-  #     - image: ponylang/ponyc-ci:alpine-llvm-7
-  #       user: pony
-  #   steps:
-  #     - checkout
-  #     - run: make LLVM_CONFIG=llvm7-config all config=debug default_pic=true staticbuild=true -j3
-  #     - run: make LLVM_CONFIG=llvm7-config test-ci config=debug default_pic=true staticbuild=true
-  #     - zulip/status:
-  #         fail_only: true
+  alpine-lib-llvm-debug:
+    docker:
+      - image: ponylang/ponyc-ci:alpine
+        user: pony
+    steps:
+      - checkout
+      - restore_cache:
+          keys:
+            - ponyc-libs-alpine-{{ .Branch }}-{{ .Revision }}
+            - ponyc-libs-alpine-{{ .Branch }}-
+            - ponyc-libs-alpine-
+      - run: make -f Makefile libs
+      - save_cache:
+          key: ponyc-libs-alpine-{{ .Branch }}-{{ .Revision }}
+          paths:
+            - "build/libs"
+      - run: make -f Makefile all config=debug
+      - run: make -f Makefile test-ci config=debug
+      - zulip/status:
+          fail_only: true
 
-  # alpine-llvm-7-release-static:
-  #   docker:
-  #     - image: ponylang/ponyc-ci:alpine-llvm-7
-  #       user: pony
-  #   steps:
-  #     - checkout
-  #     - run: make LLVM_CONFIG=llvm7-config all config=release default_pic=true staticbuild=true -j3
-  #     - run: make LLVM_CONFIG=llvm7-config test-ci config=release default_pic=true staticbuild=true
-  #     - zulip/status:
-  #         fail_only: true
-
-  # alpine-llvm-5-debug:
-  #   docker:
-  #     - image: ponylang/ponyc-ci:alpine-llvm-5
-  #       user: pony
-  #   steps:
-  #     - checkout
-  #     - run: make LLVM_CONFIG=llvm5-config all config=debug default_pic=true -j3
-  #     - run: make LLVM_CONFIG=llvm5-config test-ci config=debug default_pic=true
-  #     - zulip/status:
-  #         fail_only: true
-
-#   alpine-llvm-5-release:
-#     docker:
-#       - image: ponylang/ponyc-ci:alpine-llvm-5
-#         user: pony
-#     steps:
-#       - checkout
-#       - run: make LLVM_CONFIG=llvm5-config all config=release default_pic=true -j3
-#       - run: make LLVM_CONFIG=llvm5-config test-ci config=release default_pic=true
-#       - zulip/status:
-#           fail_only: true
-
-#   # Jobs for building and testing with ponyc vendor lib/llvm
-#   lib-llvm-ubuntu-debug:
-#     docker:
-#       - image: ponylang/ponyc-ci:ubuntu
-#         user: pony
-#     steps:
-#       - checkout
-#       - run: echo 'export test_ci_params="config=debug default_pic=true"' >> $BASH_ENV
-#       - run: *test-ci-lib-llvm
-#       - zulip/status:
-#           fail_only: true
-
-#   lib-llvm-ubuntu-release:
-#     docker:
-#       - image: ponylang/ponyc-ci:ubuntu
-#         user: pony
-#     steps:
-#       - checkout
-#       - run: echo 'export test_ci_params="config=release default_pic=true"' >> $BASH_ENV
-#       - run: *test-ci-lib-llvm
-#       - zulip/status:
-#           fail_only: true
+  alpine-lib-llvm-release:
+    docker:
+      - image: ponylang/ponyc-ci:alpine
+        user: pony
+    steps:
+      - checkout
+      - restore_cache:
+          keys:
+            - ponyc-libs-alpine-{{ .Branch }}-{{ .Revision }}
+            - ponyc-libs-alpine-{{ .Branch }}-
+            - ponyc-libs-alpine-
+      - run: make -f Makefile libs
+      - save_cache:
+          key: ponyc-libs-alpine-{{ .Branch }}-{{ .Revision }}
+          paths:
+            - "build/libs"
+      - run: make -f Makefile all config=release
+      - run: make -f Makefile test-ci config=release
+      - zulip/status:
+          fail_only: true
 
 #   # Jobs for building and testing with ponyc system installed cross-llvm
 #   cross-llvm-701-debug-arm:
@@ -250,104 +236,95 @@ jobs:
 #       - zulip/status:
 #           fail_only: true
 
-# workflows:
-#   version: 2.1
-#   nightly:
-#     triggers:
-#       - schedule:
-#           cron: "0 0 * * *"
-#           filters:
-#             branches:
-#               only: master
-#     jobs:
-#       - x86-64-unknown-linux-gnu-nightly:
-#           context: org-global
+workflows:
+  version: 2.1
+  # nightly:
+  #   triggers:
+  #     - schedule:
+  #         cron: "0 0 * * *"
+  #         filters:
+  #           branches:
+  #             only: master
+  #   jobs:
+  #     - x86-64-unknown-linux-gnu-nightly:
+  #         context: org-global
 
-#   tests:
-#     jobs:
-#       # sanity tests
-#       - verify-changelog:
-#           context: org-global
-#       - validate-shell-scripts:
-#           context: org-global
+  tests:
+    jobs:
+      # sanity tests
+      - verify-changelog:
+          context: org-global
 
-#       - lib-llvm-ubuntu-release:
-#           requires:
-#             - verify-changelog
-#             - validate-shell-scripts
-#           context: org-global
+      - validate-shell-scripts:
+          context: org-global
 
-#       - lib-llvm-ubuntu-debug:
-#           requires:
-#             - verify-changelog
-#             - validate-shell-scripts
-#           context: org-global
+      - ubuntu-lib-llvm-release:
+          requires:
+            - verify-changelog
+            - validate-shell-scripts
+          context: org-global
 
-#       - validate-docker-image-builds:
-#           requires:
-#             - verify-changelog
-#             - validate-shell-scripts
-#           context: org-global
+      - ubuntu-lib-llvm-debug:
+          requires:
+            - verify-changelog
+            - validate-shell-scripts
+          context: org-global
 
-      # - alpine-llvm-7-debug-static:
+      - validate-docker-image-builds:
+          requires:
+            - verify-changelog
+            - validate-shell-scripts
+          context: org-global
+
+      - alpine-lib-llvm-debug:
+          requires:
+            - ubuntu-lib-llvm-debug
+          context: org-global
+
+      - alpine-lib-llvm-release:
+          requires:
+            - ubuntu-lib-llvm-release
+          context: org-global
+
+      # # p2 cross compilation tests
+      # - cross-llvm-701-release-arm:
       #     requires:
-      #       - lib-llvm-ubuntu-debug
+      #       - ubuntu-lib-llvm-release
       #     context: org-global
 
-      # - alpine-llvm-7-release-static:
+      # - alpine-llvm-5-debug:
       #     requires:
-      #       - lib-llvm-ubuntu-release
-      #     context: org-global
-
-      # - alpine-lib-llvm-debug-static:
-      #     requires:
-      #       - lib-llvm-ubuntu-debug
-      #     context: org-global
-
-      # - alpine-lib-llvm-release-static:
-      #     requires:
-      #       - lib-llvm-ubuntu-release
+      #       - ubuntu-lib-llvm-debug
       #     context: org-global
 
       # # p2 cross compilation tests
       # - cross-llvm-701-release-arm:
       #     requires:
-      #       - lib-llvm-ubuntu-release
+      #       - ubuntu-lib-llvm-release
       #     context: org-global
 
-#       - alpine-llvm-5-debug:
-#           requires:
-#             - lib-llvm-ubuntu-debug
-#           context: org-global
+      # - cross-llvm-701-debug-arm:
+      #     requires:
+      #       - ubuntu-lib-llvm-debug
+      #     context: org-global
 
-#       # p2 cross compilation tests
-#       - cross-llvm-701-release-arm:
-#           requires:
-#             - lib-llvm-ubuntu-release
-#           context: org-global
+      # - cross-llvm-701-release-armhf:
+      #     requires:
+      #       - ubuntu-lib-llvm-release
+      #     context: org-global
 
-#       - cross-llvm-701-debug-arm:
-#           requires:
-#             - lib-llvm-ubuntu-debug
-#           context: org-global
+      # - cross-llvm-701-debug-armhf:
+      #     requires:
+      #       - ubuntu-lib-llvm-debug
+      #     context: org-global
 
-#       - cross-llvm-701-release-armhf:
-#           requires:
-#             - lib-llvm-ubuntu-release
-#           context: org-global
+      # # Currently don't pass
+      # - cross-llvm-701-release-aarch64:
+      #     requires:
+      #       - ubuntu-lib-llvm-release
+      #     context: org-global
 
-#       - cross-llvm-701-debug-armhf:
-#           requires:
-#             - lib-llvm-ubuntu-debug
-#           context: org-global
-
-# #     Currently don't pass
-# #      - cross-llvm-701-release-aarch64:
-# #           requires:
-# #             - lib-llvm-ubuntu-release
-# #           context: org-global
-# #
-# #      - cross-llvm-701-debug-aarch64:
-# #           requires:
-# #             - lib-llvm-ubuntu-debugS
-# #           context: org-global
+      # - cross-llvm-701-debug-aarch64:
+      #     requires:
+      #       - ubuntu-lib-llvm-debugS
+      #     context: org-global
